first pass at refactoring status effects to be more vanilla-like